long time coming, graduation

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 _DSC5120.jpg filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.pdf filter=lfs diff=lfs merge=lfs -text
